--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-.idea
+.idea/
+cmake-build-*/
+# File-based project format
+*.iws
+# IntelliJ
+out/
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+# End of https://www.toptal.com/developers/gitignore/api/intellij
+__pycache__
+src/__pycache__
+data/
+src/ovh/ovh.conf
