--- a/admin/package.json
+++ b/admin/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "vue-cli-service serve --port 3000",
+    "build": "vue-cli-service build --watch --mode development",
+    "lint": "vue-cli-service lint",
+    "production": "vue-cli-service build --mode production"
   },
   "dependencies": {
     "@vue/cli": "^4.5.14",
