--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,9 @@
-version: '3.8'
+version: '3.9'
 
 services:
 
-  proxy:
-    image: jwilder/nginx-proxy
-    container_name: etud-proxy
-    environment:
-      - ENABLE_IPV6=true
-      - VIRTUAL_PROTO=https
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      #- ./proxy/nginx.conf:/etc/nginx/conf.d/nginx-proxy.conf:ro
-      - certs:/etc/nginx/certs:ro
-    networks:
-      - proxy
-
   admin:
-    container_name: etud-admin
+    container_name: ${APP_NAME}-admin
     build:
       context: admin
       target: development
@@ -35,7 +19,7 @@ services:
       - proxy
 
   api:
-    container_name: etud-backend
+    container_name: ${APP_NAME}-backend
     build:
       context: ./backend
     command: python3 api/app.py
@@ -52,10 +36,3 @@ services:
       - VIRTUAL_PORT=5000
     networks:
       - proxy
-
-
-networks:
-  proxy:
-
-volumes:
-  certs: {}
