--- a/.github/workflows/DOCKER.yaml
+++ b/.github/workflows/DOCKER.yaml
@@ -19,7 +19,7 @@ on:
         required: true
         type: string
       target:
-        required: true
+        required: false
         type: string
     secrets:
       token:
