--- a/.github/workflows/VUE.yaml
+++ b/.github/workflows/VUE.yaml
@@ -1,4 +1,4 @@
-name: Lint Vue.js
+name: Vue.Js Workflow
 
 # This workflow check the code of a Vue.Js application
 # @author Fragan
@@ -12,11 +12,49 @@ on:
         type: string
 
 jobs:
-  test-lint:
+
+  cache-build:
+    name: Build - With Cache
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm run build
+      - uses: actions/cache@v2
+        id: restore-build
+        with:
+          path: ./${{ inputs.workdir }}/*
+          key: ${{ github.sha }}
+
+  vue-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+      - uses: actions/cache@v2
+        id: restore-build
+        with:
+          path: ./${{ inputs.workdir }}/*
+          key: ${{ github.sha }}
       - run: |
           cd ${{ inputs.workdir }}
-          npm install
           npm run lint
+
+  vue-unit-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+      - uses: actions/cache@v2
+        id: restore-build
+        with:
+          path: ./${{ inputs.workdir }}/*
+          key: ${{ github.sha }}
+      - run: |
+          cd ${{ inputs.workdir }}
+          npm run test:unit
