--- a/.github/workflows/students.yaml
+++ b/.github/workflows/students.yaml
@@ -1,6 +1,6 @@
 name: Build / Push Admin
 
-# This workflow deploy the Admin Panel
+# This workflow deploy the Students Panel
 # @author Fragan
 # @version 0.1.0
 
@@ -14,16 +14,16 @@ jobs:
   vue:
     uses: ./.github/workflows/VUE.yaml
     with:
-      workdir: './admin'
+      workdir: './students'
 
-  # Build & Push the Docker image from the admin panel
+  # Build & Push the Docker image from the student panel
   build-and-push-image:
     needs: ['check-vue']
     uses: ./.github/workflows/DOCKER.yaml
     with:
       # Dockerfile build entry point (see. https://docs.docker.com/engine/context/working-with-contexts/)
-      context: './admin'
+      context: './students'
       # Dockerfile build target (see. https://docs.docker.com/develop/develop-images/multistage-build/)
       target: 'production'
       registry: ghcr.io
-      image_name: ${{ github.repository }}-admin
+      image_name: ${{ github.repository }}-students
