--- a/.github/workflows/VUE.yaml
+++ b/.github/workflows/VUE.yaml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16
-      - run: npm ci
+      - run: npm install
       - run: npm run build
       - uses: actions/cache@v2
         id: restore-build
