--- a/.github/workflows/VUE.yaml
+++ b/.github/workflows/VUE.yaml
@@ -21,8 +21,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 16
-      - run: cd ${{ inputs.workdir }}
-      - run: npm install
+      - run: cd ${{ inputs.workdir }} && npm install
       - run: npm run build
       - uses: actions/cache@v2
         id: restore-build
