--- a/admin/package.json
+++ b/admin/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@vue/cli": "^5.0.1",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuetify": "^3.0.0-alpha"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
