--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:16-slim as builder_development
 
-WORKDIR /usr/src/app/adminapp
+WORKDIR /usr/src/app/
 
 COPY package*.json ./
 
@@ -10,9 +10,9 @@ RUN set -eux; \
 
 FROM node:16-slim as development
 
-WORKDIR /usr/src/app/adminapp
+WORKDIR /usr/src/app/
 
-COPY --from=builder_development /usr/src/app/adminapp ./
+COPY --from=builder_development /usr/src/app/ ./
 
 RUN mkdir node_modules/.vite && chmod -R 777 node_modules/.vite
 
@@ -24,9 +24,9 @@ CMD ["npm", "run", "dev"]
 
 FROM node:16-slim as builder_production
 
-WORKDIR /usr/src/app/adminapp
+WORKDIR /usr/src/app/
 
-COPY --from=builder_development /usr/src/app/adminapp ./
+COPY --from=builder_development /usr/src/app/ ./
 
 COPY . .
 
@@ -37,7 +37,7 @@ FROM nginx:stable-alpine as production
 
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder_production /usr/src/app/adminapp/dist /app
+COPY --from=builder_production /usr/src/app//dist /app
 
 EXPOSE 80
 
