Added Students Dockerfile

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:16-slim as builder_development
 
-WORKDIR /usr/src/app/adminapp
+WORKDIR /usr/src/app/
 
 COPY package*.json ./
 
@@ -10,9 +10,9 @@ RUN set -eux; \
 
 FROM node:16-slim as development
 
-WORKDIR /usr/src/app/adminapp
+WORKDIR /usr/src/app/
 
-COPY --from=builder_development /usr/src/app/adminapp ./
+COPY --from=builder_development /usr/src/app/ ./
 
 RUN mkdir node_modules/.vite && chmod -R 777 node_modules/.vite
 
