--- a/students/Dockerfile
+++ b/students/Dockerfile
@@ -16,7 +16,11 @@ COPY --from=builder_development /usr/src/app/studentsapp ./
 
 RUN mkdir node_modules/.vite && chmod -R 777 node_modules/.vite
 
-EXPOSE 3000
+RUN mkdir node_modules/.vite && chmod -R 777 node_modules/.vite
+
+EXPOSE 4000
+
+USER node
 
 CMD ["npm", "run", "dev"]
 
