--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -30,6 +30,7 @@ services:
       - ./backend/gplib:/usr/src/app/gplib
       - ./backend/data:/usr/src/app/data
       - ./backend/ovh:/usr/src/app/ovh
+      - ./backend/cli:/usr/src/app/cli
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - VIRTUAL_HOST=api.insset.localhost
