--- a/.github/workflows/DOCKER.yaml
+++ b/.github/workflows/DOCKER.yaml
@@ -50,10 +50,12 @@ jobs:
           images: ${{ inputs.registry }}/${{ inputs.image_name }}
 
       - name: Build / Push Admin
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: int128/kaniko-action@v1
         with:
           context: ${{ inputs.context }}
           target: ${{ inputs.target }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache: true
+          cache-repository: ghcr.io/${{ github.repository }}/cache
