--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,8 +1,18 @@
 FROM node:16-slim as builder_development
 
+ARG USER=admin
+ARG UID=1000
+
+RUN set -eux; \
+    useradd $USER -u $UID -G www-data,root; \
+    chown -R $USER:$USER /home/$USER
+
+
 WORKDIR /usr/src/app/
 
-COPY package*.json ./
+COPY --chown=$USER:www-data package*.json ./
+
+USER $USER;
 
 RUN set -eux; \
     npm install; \
@@ -11,6 +21,13 @@ RUN set -eux; \
 FROM node:16-slim as development
 
 WORKDIR /usr/src/app/
+
+ARG USER=admin
+ARG UID=1000
+
+RUN set -eux; \
+    useradd $USER -u $UID -G www-data,root; \
+    chown -R $USER:$USER /home/$USER
 
 COPY --from=builder_development /usr/src/app/ ./
 
@@ -62,7 +79,9 @@ RUN set -eux; \
 
 FROM nginx:stable-alpine@sha256:26716e37188bd01374360199773bc8ad8736edb7e234a2a1956a13b9800fccc4 as production
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --chown=$USER:www-data nginx.conf /etc/nginx/conf.d/default.conf
+
+COPY --chown=$USER:www-data --from=builder_production /usr/src/app/dist /app
 
 COPY --from=builder_production /usr/src/app/dist /app
 
