--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,8 +1,18 @@
 FROM node:16-slim as builder_development
 
+ARG USER=admin
+ARG UID=1000
+
+RUN set -eux; \
+    useradd $USER -u $UID -G www-data,root; \
+    chown -R $USER:$USER /home/$USER
+
+
 WORKDIR /usr/src/app/
 
-COPY package*.json ./
+COPY --chown=$USER:www-data package*.json ./
+
+USER $USER;
 
 RUN set -eux; \
     npm install; \
@@ -12,13 +22,20 @@ FROM node:16-slim as development
 
 WORKDIR /usr/src/app/
 
+ARG USER=admin
+ARG UID=1000
+
+RUN set -eux; \
+    useradd $USER -u $UID -G www-data,root; \
+    chown -R $USER:$USER /home/$USER
+
 COPY --from=builder_development /usr/src/app/ ./
 
 RUN mkdir node_modules/.vite && chmod -R 777 node_modules/.vite
 
 EXPOSE 4000
 
-USER node
+USER $USER
 
 CMD ["npm", "run", "dev"]
 
@@ -26,18 +43,29 @@ FROM node:16-slim as builder_production
 
 WORKDIR /usr/src/app/
 
-COPY --from=builder_development /usr/src/app/ ./
+ARG USER=admin
+ARG UID=1000
 
-COPY . .
+RUN set -eux; \
+    useradd $USER -u $UID -G www-data,root; \
+    chown -R $USER:$USER /home/$USER
+
+COPY --chown=$USER:www-data --from=builder_development /usr/src/app/ ./
+
+COPY --chown=$USER:www-data . .
+
+USER $USER
 
 RUN set -eux; \
     npm run build;
 
 FROM nginx:stable-alpine as production
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --chown=$USER:www-data nginx.conf /etc/nginx/conf.d/default.conf
 
-COPY --from=builder_production /usr/src/app//dist /app
+COPY --chown=$USER:www-data --from=builder_production /usr/src/app/dist /app
+
+USER $USER
 
 EXPOSE 80
 
