--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -8,12 +8,9 @@ RUN set -eux; \
     mkdir -p /home/$USER/; \
     chown -R $USER:$USER /home/$USER
 
-
 WORKDIR /usr/src/app/
 
 COPY --chown=$USER:www-data package*.json ./
-
-USER $USER;
 
 RUN set -eux; \
     npm install; \
@@ -21,23 +18,11 @@ RUN set -eux; \
 
 FROM node:16-slim as development
 
-WORKDIR /usr/src/app/
-
-ARG USER=admin
-ARG UID=1000
-
-RUN set -eux; \
-    useradd $USER -u $UID -G www-data,root; \
-    mkdir -p /home/$USER/; \
-    chown -R $USER:$USER /home/$USER
+WORKDIR /usr/src/app
 
 COPY --from=builder_development /usr/src/app/ ./
 
-RUN mkdir node_modules/.vite && chmod -R 777 node_modules/.vite
-
 EXPOSE 4000
-
-USER $USER
 
 CMD ["npm", "run", "dev"]
 
@@ -46,7 +31,7 @@ FROM node:16-slim as builder_production
 WORKDIR /usr/src/app/
 
 ARG USER=admin
-ARG UID=1000
+ARG UID=1005
 
 RUN set -eux; \
     useradd $USER -u $UID -G www-data,root; \
@@ -57,18 +42,14 @@ COPY --chown=$USER:www-data --from=builder_development /usr/src/app/ ./
 
 COPY --chown=$USER:www-data . .
 
-USER $USER
-
 RUN set -eux; \
     npm run build;
 
 FROM nginx:stable-alpine as production
 
-COPY --chown=$USER:www-data nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-COPY --chown=$USER:www-data --from=builder_production /usr/src/app/dist /app
-
-USER $USER
+COPY --from=builder_production /usr/src/app/dist /app
 
 EXPOSE 80
 
