--- a/.github/workflows/DOCKER.yaml
+++ b/.github/workflows/DOCKER.yaml
@@ -44,7 +44,9 @@ jobs:
         with:
           context: ${{ inputs.context }}
           target: ${{ inputs.target }}
-          push: false
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache: true
           cache-repository: ghcr.io/${{ github.repository }}/cache
 
