--- a/.github/workflows/admin.yaml
+++ b/.github/workflows/admin.yaml
@@ -17,7 +17,7 @@ jobs:
       workdir: './admin'
 
   # Build & Push the Docker image from the admin panel
-  build-and-push-image:
+  docker:
     needs: ['vue']
     uses: ./.github/workflows/DOCKER.yaml
     with:
