--- a/.github/workflows/students.yaml
+++ b/.github/workflows/students.yaml
@@ -17,7 +17,7 @@ jobs:
       workdir: './students'
 
   # Build & Push the Docker image from the student panel
-  build-and-push-image:
+  admin:
     needs: ['vue']
     uses: ./.github/workflows/DOCKER.yaml
     with:
