--- a/.github/workflows/DOCKER.yaml
+++ b/.github/workflows/DOCKER.yaml
@@ -44,7 +44,7 @@ jobs:
         with:
           context: ${{ inputs.context }}
           target: ${{ inputs.target }}
-          push: ffalse
+          push: false
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache: true
