--- a/admin/package.json
+++ b/admin/package.json
@@ -2,23 +2,27 @@
   "name": "admin",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --host --port 4000",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview --host --port 4000",
     "test:unit": "vitest --environment jsdom",
-    "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "dev": "vite --host --port 4000",
+    "preview": "vite preview --host --port 4000",
+    "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "@vue/cli": "^5.0.1",
+    "roboto-fontface": "*",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12",
-    "vuetify": "^3.0.0-alpha"
+    "vuetify": "^3.0.0-alpha",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.25",
+    "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "@vue/eslint-config-prettier": "^7.0.0",
@@ -29,9 +33,13 @@
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
+    "sass": "^1.38.0",
+    "sass-loader": "^10.0.0",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
     "vitest": "^0.5.0",
-    "vue-tsc": "^0.31.4"
+    "vue-cli-plugin-vuetify": "~2.4.8",
+    "vue-tsc": "^0.31.4",
+    "vuetify-loader": "^2.0.0-alpha.0"
   }
 }
