--- a/admin/package.json
+++ b/admin/package.json
@@ -2,10 +2,11 @@
   "name": "admin",
   "version": "0.0.0",
   "scripts": {
-    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview",
+    "build": "vite build",
     "test:unit": "vitest --environment jsdom",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "dev": "vite --host --port 4000",
+    "dev": "vite",
     "preview": "vite preview --host --port 4000",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
@@ -15,7 +16,7 @@
     "roboto-fontface": "*",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12",
-    "vuetify": "^3.0.0-alpha",
+    "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "@vue/tsconfig": "^0.1.3",
+    "@vuetify/vite-plugin": "^1.0.0-alpha.0",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
