--- a/admin/package.json
+++ b/admin/package.json
@@ -2,10 +2,11 @@
   "name": "admin",
   "version": "0.0.0",
   "scripts": {
-    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview",
+    "build": "vite build",
     "test:unit": "vitest --environment jsdom",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "dev": "vite --host --port 4000",
+    "dev": "vite",
     "preview": "vite preview --host --port 4000",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
