--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,78 +1,112 @@
 FROM ubuntu:20.04
 
-# Global update
-RUN apt update -y
+# Arguments pour le build
 
-ENV TZ = Europe/Paris
+ARG TIMEZONE=Europe/Paris
+ARG USER=gestproj
+ARG UID=1000
+ARG PYTHON_VERSION=python3.8
 
-# Timezone setup
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime
-RUN echo $TZ > /etc/timezone
+# Config de la TZ
 
-# Apache installation
-RUN apt install -y apache2 openssl
+RUN set -eux; \
+    ln -snf /usr/share/zoneinfo/$TIMEZONE /etc/localtime; \
+    echo $TIMEZONE > /etc/timezone
 
-RUN mkdir /etc/apache2/ssl-certificat
+# Installation des packages
+
+RUN apt update && apt install -y \
+    apache2 \
+    openssl \
+    openssh-server \
+    curl \
+    $PYTHON_VERSION \
+    python3-pip \
+    python-dev \
+    git
+
+# Création des dossiers néscessaires
+RUN set -eux; \
+    apt-get clean; \
+    rm -rf /var/lib/apt/lists/*; \
+    mkdir /etc/apache2/ssl-certificat; \
+    mkdir -p /home/etudiants
+
 WORKDIR /etc/apache2/ssl-certificat
 
 # OpenSSL certification
-RUN openssl genrsa 2048 > server.key
-RUN openssl req -new  \
+RUN set -eux; \
+    openssl genrsa 2048 > server.key; \
+    openssl req -new  \
 	-subj "/C=FR/ST=Aisne/L=Saint-quentin/O=INSSET/OU=IT Department/CN=licence-st.u-picardie.fr" \
 	-key server.key > server.csr
-RUN openssl genrsa 2048 > ca.key
-RUN openssl req -new -x509 -days 365 \
+
+RUN set -eux; \
+    openssl genrsa 2048 > ca.key; \
+    openssl req -new -x509 -days 365 \
 	-subj "/C=FR/ST=Somme/L=Amiens/O=UPJV/OU=IT Department/CN=licence-st.u-picardie.fr" \
 	-key ca.key > ca.crt
-RUN openssl x509 -req -in server.csr -out server.crt -CA ca.crt -CAkey ca.key -CAcreateserial -CAserial ca.srl
-RUN echo "export APACHE_CRT_DIR=\$APACHE_CONFDIR/ssl-certificate" >> /etc/apache2/envvars
+
+RUN set -eux; \
+    openssl x509 -req -in server.csr -out server.crt -CA ca.crt -CAkey ca.key -CAcreateserial -CAserial ca.srl; \
+    echo "export APACHE_CRT_DIR=\$APACHE_CONFDIR/ssl-certificate" >> /etc/apache2/envvars
 
 RUN a2enmod dav_fs proxy authz_groupfile
 
-RUN apt install -y openssh-server
+# Config SSH pour le sftp
 
-RUN mkdir -p /run/sshd
-RUN echo "\n\
-Match group sftp\n\
-  ChrootDirectory %h\n\
-  X11Forwarding no\n\
-  AllowTcpForwarding no\n\
-  ForceCommand internal-sftp\n\
-" >> /etc/ssh/sshd_config
+RUN set -eux; \
+    groupadd sftp; \
+    mkdir -p /run/sshd; \
+    echo "\n\
+          Match group sftp\n\
+          ChrootDirectory %h\n\
+          X11Forwarding no\n\
+          AllowTcpForwarding no\n\
+          ForceCommand internal-sftp\n\
+        " >> /etc/ssh/sshd_config
 
-RUN mkdir -p /home/etudiants
+# Installation de Docker
 
-RUN apt install -qy curl
-RUN curl -sSL https://get.docker.com/ | sh
-RUN groupadd sftp
+RUN set -eux; \
+    curl -sSL https://get.docker.com/ | sh
 
-RUN adduser test
+# Création de répertoire principale pour l'execution des services
 
-# env pour faire tourner les libs
-WORKDIR /home/test
+RUN set -eux; \
+    useradd $USER -u $UID -G sftp,root; \
+    mkdir -p /home/$USER/; \
+    chown -R $USER:$USER /home/$USER
 
-RUN apt install -y python3
-RUN apt update -y
-RUN apt install -y python3-pip
+WORKDIR /home/$USER
+
+# Copie des services & dépendances
+
+COPY --chown=$USER:$USER gplib gplib/
+COPY --chown=$USER:$USER api api/
+COPY --chown=$USER:$USER cli cli/
+COPY --chown=$USER:$USER ovh ovh/
+
+RUN set -eux; \
+    pip install -r api/requirements.txt; \
+    pip install -r cli/requirements.txt
+
+# Préparation du volume data dans lequel sera stocké les données
+
+RUN mkdir data
+
+# On "expose" le dossier data comme volume pour permettre une persistance des données hors conteneur
+VOLUME data
 
 # Le numéro de version de python est à changer en fonction de la version de python installée
-RUN ln -s /home/test/lib/gestprojlib.py /usr/lib/python3.8/gestprojlib.py
-RUN pip install click
+RUN ln -s /home/test/lib/gestprojlib.py /usr/lib/$PYTHON_VERSION/gestprojlib.py
 
-RUN python3 -m pip install --upgrade pip
-RUN apt install -y git
-RUN pip install -e git+https://github.com/ovh/python-ovh.git#egg=ovh
-
-COPY requirements.txt ./
-
-RUN pip install -r requirements.txt
-
-ENV CONF_OVH_PATH=/home/test/ovh/conf
+ENV CONF_OVH_PATH=/home/$USER/ovh/conf
 ENV CONF_OVH_FILE="Gestproj_12_2021_ovh.conf"
-
-ENV PYTHONPATH=/home/test/gplib
+ENV PYTHONPATH=/home/$USER/gplib
 
 EXPOSE 5000
 
-WORKDIR /usr/src/app
+WORKDIR /home/$USER/api
 
+CMD ["python3", "-m" , "flask", "run", "--host=0.0.0.0"]
