--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -17,7 +17,7 @@ jobs:
       workdir: './backend/api'
 
   # Build & Push the Docker image from the admin panel
-  build-and-push-image:
+  docker:
     needs: ['flask']
     uses: ./.github/workflows/DOCKER.yaml
     with:
