--- a/.github/workflows/SONARQUBE.yaml
+++ b/.github/workflows/SONARQUBE.yaml
@@ -18,4 +18,4 @@ jobs:
         uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_TOKEN: a3d5ea3bd83242bdc14a4f526ff8222946ce406e
