add admin interface

--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -38,6 +38,34 @@ RUN set -eux; \
     npm install; \
     npm cache clean --force;
 
+FROM node:16-slim as development
+
+WORKDIR /usr/src/app
+
+COPY --from=builder_development /usr/src/app/ ./
+
+EXPOSE 4000
+
+CMD ["npm", "run", "dev"]
+
+FROM node:16-slim@sha256:9b43cdacd070d1b38976a804aec78f03139c600865a3c72501af3bbec8d4bdee as build_vendor
+
+ARG USER=admin
+ARG UID=1005
+
+RUN set -eux; \
+    useradd $USER -u $UID -G www-data,root; \
+    mkdir -p /home/$USER/; \
+    chown -R $USER:$USER /home/$USER
+
+WORKDIR /usr/src/app/
+
+COPY --chown=$USER:www-data package*.json ./
+
+RUN set -eux; \
+    npm install; \
+    npm cache clean --force;
+
 FROM node:16-slim@sha256:9b43cdacd070d1b38976a804aec78f03139c600865a3c72501af3bbec8d4bdee as builder_production
 
 WORKDIR /usr/src/app/
