--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,87 +1,48 @@
-version: '3.8'
+version: "3.9"
 
 services:
 
-  # Reverse Proxy
-  # @author Fragan
-  # @version 0.1.0
-
-  proxy:
-    image: jwilder/nginx-proxy
-    container_name: ${APP_NAME}-proxy
-    environment:
-      - ENABLE_IPV6=true
-      - VIRTUAL_PROTO=https
+  traefik:
+    image: traefik:v2.6
+    container_name: ${APP_NAME}-traefik
+    command:
+      - --log.level=DEBUG
+#      - --certificatesresolvers.letsencrypt.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
+      - --api.insecure=true
+      - --providers.docker=true
+      - --providers.docker.exposedbydefault=false
+      - --entrypoints.web.address=:80
+      - --entrypoints.websecure.address=:443
+#      - --entrypoints.websecure.http.tls.domains[0].main=$DOMAIN
+#      - --entrypoints.websecure.http.tls.domains[0].sans=*.$DOMAIN
+#      - --entrypoints.websecure.http.tls.certresolver=letsencrypt
+#      - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
+#      - --certificatesresolvers.letsencrypt.acme.email=$ACME_EMAIL
+#      - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
+    labels:
+      - "traefik.enable=true"
+#      - "traefik.http.routers.traefik-api.service=api@internal"
+#      - "traefik.http.routers.traefik-api.tls=true"
+#      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+#      - "traefik.http.middlewares.redirect-to-https.redirectscheme.permanent=true"
     ports:
       - "80:80"
       - "443:443"
+      - "8090:8080"
     volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-      #- ./proxy/nginx.conf:/etc/nginx/conf.d/nginx-proxy.conf:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./letsencrypt:/letsencrypt
     networks:
-      - proxy
-
-  # Node exporter for Prometheus metrics
-  # @author Fragan
-  # @version 0.1.0
-
-  node-exporter:
-    image: prom/node-exporter:latest
-    container_name: ${APP_NAME}-node-exporter
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - ../:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.rootfs=/rootfs'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    networks:
-      - proxy
-
-  # Prometheus core
-  # @author Fragan
-  # @version 0.1.0
-
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: ${APP_NAME}-prometheus
-    environment:
-      - VIRTUAL_HOST=prometheus.insset.localhost
-      - VIRTUAL_PORT=9090
-    volumes:
-      #- ./prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--web.enable-lifecycle'
-    expose:
-      - 9090
-    networks:
-      - proxy
-
-  # Grafana
-  # @author Fragan
-  # @version 0.1.0
-
-  grafana:
-    image: grafana/grafana
-    container_name: ${APP_NAME}-grafana
-    volumes:
-      - grafana:/etc/grafana/provisioning
-    environment:
-      - VIRTUAL_HOST=grafana.insset.localhost
-      - VIRTUAL_PORT=3000
-    networks:
-      - proxy
+      traefik:
+        ipv4_address: 172.10.0.2
 
 networks:
-  proxy:
+  traefik:
+    name: traefik-gateway
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.10.0.0/16
 
 volumes:
-  prometheus: {}
-  grafana: {}
+  prometheus-data: {}
