--- a/students/package.json
+++ b/students/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.14",
+    "sass": "^1.52.1",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
