--- a/backend/config/docker-skell/symfony/docker-compose.yml
+++ b/backend/config/docker-skell/symfony/docker-compose.yml
@@ -3,21 +3,28 @@ version: "3.9"
 services:
 
   app:
+    container_name: ${APP_NAME}-app
     build:
       context: php
+    ports:
+      - "${SSH_PORT}:22"
     volumes:
       - ${LOCAL_VOLUME}:/var/www/html
+      - ${AUTHORIZED_KEYS}:/root/.ssh/authorized_keys
     networks:
       - traefik
 
   nginx:
+    container_name: ${APP_NAME}-nginx
     build:
       context: nginx
+    volumes:
+      - ${LOCAL_VOLUME}:/var/www/html
+    depends_on:
+      - app
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.$TRAEFIK_KEY-symfony-web.rule=host(`$HOST`)"
-    volumes:
-      - ${LOCAL_VOLUME}:/var/www/html
     networks:
       - traefik
 
