--- a/backend/config/docker-skell/symfony/nginx/conf.d/default.conf
+++ b/backend/config/docker-skell/symfony/nginx/conf.d/default.conf
@@ -4,7 +4,7 @@ server {
     client_max_body_size 18M;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/html/symfony/public;
+    root /var/www/html/public;
 
     location ~ \.php$ {
         client_max_body_size 18M;
