--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,12 +1,10 @@
-global:
-  scrape_interval: 30s
-
 scrape_configs:
-  - job_name: "prometheus"
+
+  - job_name: backend-cadvisor
     scrape_interval: 5s
     static_configs:
-      - targets: ["prometheus:9090"]
+      - targets:
+          -  backend-cadvisor:8080
 
-  - job_name: "node"
-    static_configs:
-      - targets: ["node-exporter:9100"]
+rule_files:
+  - 'prometheus.rules.yml'
