--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,7 @@
 APP_NAME=gestproj
-APP_ENV=development
+TRAEFIK_KEY=backend
+DOMAIN=localhost
+HOST=insset.localhost
 
-# Admin UI
-
-ADMIN_URI=admin.insset.localhost
-ADMIN_USER=
-ADMIN_PASSWORD=
-ADMIN_PORT=3000
-
-# Student UI
-
-STUDENT_UI=
-STUDENT_USER=
-STUDENT_ADMIN=
-STUDENT_PORT=
-
-# Backend - API
-
-API_URI=api.insset.localhost
-
-# Prometheus
-
-PROMETHEUS_URI=prometheus.insset.localhost
-
-# Grafana
-
-GRAFANA_URI=grafana.insset.localhost
-
-
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
