--- a/.github/workflows/DOCKER.yaml
+++ b/.github/workflows/DOCKER.yaml
@@ -24,6 +24,12 @@ on:
     secrets:
       token:
         required: false
+      PRIVATE_KEY:
+        required: true
+      SSH_USER:
+        required: true
+      SSH_HOST:
+        required: true
 
 jobs:
 
